--- a/BTLogger.plist
+++ b/BTLogger.plist
@@ -19,11 +19,11 @@
 				<key>bundle-identifier</key>
 				<string>com.tzone.BTLogger</string>
 				<key>bundle-version</key>
-				<string>1.0</string>
+				<string>1.0.2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>BTLogger.ipa</string>
+				<string>温湿度记录仪</string>
 			</dict>
 		</dict>
 	</array>
